# public-dns-crawler

./: .dockerignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  smoke-test-input.json
.github/workflows/: ci.yml  refresh.yml  release.yml
configs/: default.toml  default.yml  manual-dns.txt  manual-doh.toml  manual-doh.yml  probe-corpus-seeds.json  probe-corpus.toml
docker/: probe-corpus.Dockerfile
scripts/: analyze_history.py  analyze_scores.py  apply_history_quarantine.py  generate_stats_report.py  smoke_massdns.sh  update_history.py
src/resolver_inventory/: __init__.py  cli.py  history.py  models.py  readme_report.py  serialization.py  settings.py
src/resolver_inventory/export/: __init__.py  dnsdist.py  json.py  text.py  unbound.py
src/resolver_inventory/normalize/: __init__.py  dns.py  doh.py
src/resolver_inventory/probe_corpus/: __init__.py  exporters.py  generator.py  models.py  schema.py  sources.py  validators.py
src/resolver_inventory/sources/: __init__.py  adguard.py  base.py  curl_wiki.py  manual.py  publicdns_info.py
src/resolver_inventory/util/: __init__.py  dns_packets.py  http.py  logging.py  retry.py  time.py  url.py
src/resolver_inventory/validate/: __init__.py  base.py  corpus.py  corpus_schema.py  dns_plain.py  doh.py  massdns_backend.py  plain_dns_backend.py  scorer.py  spill_store.py
tests/: conftest.py
tests/fixtures/: dns_authority.py  dns_recursive.py  doh_server.py  probe-corpus-generated.json  probe-corpus-invalid-schema.json  probe-corpus-minimal.json  probe-corpus-valid.json
tests/integration/: test_dns_plain.py  test_doh.py  test_exporters.py  test_history_pipeline.py  test_massdns_backend.py  test_probe_corpus_cli.py  test_probe_corpus_generation.py  test_probe_corpus_runtime.py  test_validate_pipeline.py
tests/network/: test_probe_corpus_live.py
tests/unit/: test_cli.py  test_corpus.py  test_exports.py  test_history.py  test_massdns_backend.py  test_models.py  test_normalize.py  test_probe_corpus.py  test_retry.py  test_scorer.py  test_settings.py  test_sources.py  test_validate_backends.py  test_validation_parity_massdns.py  test_validation_runtime.py  test_validation_streaming.py
